--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@ html {
 }
 
 #app-content {
+	border-radius: 25px;
 	margin: auto;
-	max-width: 50%;
+	max-width: 65%;
 	border: 1px solid #E7E9EB;
 	background-color: white;
-	padding: 10px;
+	padding: 30px;
 	min-height: calc(100vh - 50px);
 }
