--- a/src/projects.css
+++ b/src/projects.css
@@ -13,5 +13,5 @@
 #project-buttons {
 	display: flex;
 	justify-content: space-evenly;
-	padding: 30px 30px 0px 30px;
+	padding: 1em 30px 0px 30px;
 }
