--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,6 +1,6 @@
 
 .home-page-body {
 	/*font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;*/
-	font-family: "Roboto", "Trebuchet MS", sans-serif;
-	font-size: 14px;
+	font-family: "Titillium", "Trebuchet MS", sans-serif;
+	font-size: 16px;
 }
