--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,11 +1,11 @@
 
 .about-header {
-	font-family: "Roboto", "Trebuchet MS", sans-serif;
+	font-family: "Titillium", "Trebuchet MS", sans-serif;
 	font-weight: bold;
 }
 
 .about-page-body {
 	/*font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;*/
-	font-family: "Roboto", "Trebuchet MS", sans-serif;
-	font-size: 14px;
+	font-family: "Titillium", "Trebuchet MS", sans-serif;
+	font-size: 16px;
 }
