--- a/src/projects.css
+++ b/src/projects.css
@@ -8,6 +8,7 @@
 	/*font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;*/
 	font-family: "Titillium", "Trebuchet MS", sans-serif;
 	font-size: 16px;
+	color: #555555;
 }
 
 #project-buttons {
